# buyer-intelligence

./: .env.example  .gitignore  PROGRESS.md  README.md  pyproject.toml
company/: ankomn.toml
docs/: README.md  apollo.md  gmail.md  google-maps.md  hunter.md  importyeti.md  操作手冊.md
examples/: seed_leads.csv
imports/: web_20260707_215917_apollo-contacts-export.csv
plan/: ankomn_strategy_report.html  buyer_intelligence_architecture.html
src/buyer_intel/: __init__.py  actions.py  cli.py  company.py  config.py  dashboard.py  db.py  enrich.py  graph.py  llm.py  models.py  outreach.py  scoring.py
src/buyer_intel/adapters/: __init__.py  apollo.py  base.py  iha.py  manual.py  places.py
src/buyer_intel/field_ops/: __init__.py  app.py  brief.py  ocr.py
src/buyer_intel/sending/: __init__.py  dispatcher.py  footer.py  gmail.py  schedule.py  sequence.py
src/buyer_intel/webui/: __init__.py  app.py  jobs.py  scheduler.py
tests/: test_adapters.py  test_enrich.py  test_scoring.py  test_sending.py
