[project]
name = "buyer-intel"
version = "0.1.0"
description = "Ankomn Buyer Intelligence System — TIHS 2027 全週期 B2B 買家開發系統"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.92",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
    "pydantic>=2.7",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "rapidfuzz>=3.9",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
buyer-intel = "buyer_intel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/buyer_intel"]
